# Async-Task-Engine

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench_engine.cpp  bench_queue.cpp
docs/: project_guide.md
include/ate/: asio_context.hpp  async_result.hpp  coro_task.hpp  lockfree_queue.hpp  logger.hpp  pipeline.hpp  scheduler.hpp  task.hpp  task_queue.hpp  thread_pool.hpp
src/: thread_pool.cpp
tests/stress/: stress_pool.cpp  stress_queue.cpp
tests/unit/: test_asio_context.cpp  test_async_result.cpp  test_coro_task.cpp  test_lockfree_queue.cpp  test_logger.cpp  test_pipeline.cpp  test_scheduler.cpp  test_task_queue.cpp  test_thread_pool.cpp
